# Phoenix

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GenerateProject.bat  Phoenix.sln  README.md  premake5.lua  vcpkg.json
Game/: Game.vcxproj  Game.vcxproj.filters  GameApp.cpp  Playground.cpp  imgui.ini
Game/Entities/include/: Bullet.h  Isac.h  Knight.h  Mob.h  Room.h
Game/Entities/src/: Bullet.cpp  Isac.cpp  Knight.cpp  Mob.cpp  Room.cpp
Game/Systems/include/: MobManager.h
Game/Systems/src/: MobManager.cpp
Phoenix/: EntryPoint.h  Phoenix.h  Phoenix.vcxproj  Phoenix.vcxproj.filters  Test.cpp  Test.h
Phoenix/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h
Phoenix/Core/Animation/include/: AnimationSubsystem.h
Phoenix/Core/Animation/src/: AnimationSubsystem.cpp
Phoenix/Core/Base/: Base.h
Phoenix/Core/ECS/include/: AnimationData.h  AnimationSystem.h  ColliderData.h  ColliderSystem.h  ComponentSystem.h  ComponentSystem.hxx  ComponentsData.h  Entity.hxx  EntityComponent.h  EntityManager.h  ISystem.h  SpriteData.h  SpriteSystem.h  TransformSystem.h  TransformsData.h
Phoenix/Core/ECS/src/: AnimationData.cpp  AnimationSystem.cpp  ColliderData.cpp  ColliderSystem.cpp  ComponentSystem.cpp  ComponentsData.cpp  Entity.cpp  EntityManager.cpp  ISystem.cpp  SpriteData.cpp  SpriteSystem.cpp  TransformSystem.cpp  TransformsData.cpp
Phoenix/Core/ECSExtended/include/: Entity.h  EntitySubsystem.h  IComponent.h  SpriteSubsystem.h  Tag.h  TransformSubsytem.h
Phoenix/Core/ECSExtended/src/: Entity.cpp  EntitySubsystem.cpp  SpriteSubsystem.cpp  TransformSubsytem.cpp
Phoenix/Core/Editor/include/: EditorLayer.h  ImGuiOpenGL.h
Phoenix/Core/Editor/src/: EditorLayer.cpp
Phoenix/Core/Events/: Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Phoenix/Core/Events/include/: Event.h  EventDispatcher.h
Phoenix/Core/ImGui/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
Phoenix/Core/ImGui/include/: ImGuiLayer.h  ImGuiOpenGL.h
Phoenix/Core/ImGui/src/: ImGuiLayer.cpp
Phoenix/Core/Layers/Layer/include/: Layer.h
Phoenix/Core/Layers/Layer/src/: Layer.cpp
Phoenix/Core/Layers/LayerStack/include/: LayerStack.h
Phoenix/Core/Layers/LayerStack/src/: LayerStack.cpp
Phoenix/Core/Log/include/: Log.h
Phoenix/Core/Log/src/: Log.cpp
Phoenix/Core/Maths/include/: Maths.h
Phoenix/Core/Physics/include/: CollisionSubSytem.h
Phoenix/Core/Physics/src/: CollisionSubSytem.cpp
Phoenix/Core/Utils/: Color.h  FileSystem.h  KeyCode.h  MouseCode.h  TimeStep.h  Timer.h  UUID.h
Phoenix/HAL/: HAL.h  PlatformDetection.h
Phoenix/HAL/Common/Core/Animation/include/: AnimationSubsystem.h
Phoenix/HAL/Common/Core/Animation/src/: AnimationSubsystem.cpp
Phoenix/HAL/Common/Core/ECSExtended/include/: Entity.h  EntitySubsystem.h  SpriteSubsystem.h  Tag.h  TransformSubsytem.cpp  TransformSubsytem.h
Phoenix/HAL/Common/Core/ECSExtended/src/: Entity.cpp  EntitySubsystem.cpp  SpriteSubsystem.cpp
Phoenix/HAL/Common/Core/Graphics/Shaders/: fragment.frag  vertex.vert
Phoenix/HAL/Common/Core/Input/include/: Input.h  InputActionRegistrator.h  InputActionRegistratorSubSystem.h  InputActions.h
Phoenix/HAL/Common/Core/Input/src/: Input.cpp  InputActionRegistrator.cpp  InputActionRegistratorSubSystem.cpp  InputActions.cpp
Phoenix/HAL/Common/Core/Physics/include/: CollisionSubSytem.h
Phoenix/HAL/Common/Core/Physics/src/: CollisionSubSytem.cpp
Phoenix/HAL/Common/Core/Scene/include/: OrthographicCamera.h  OrthographicCameraController.h  Scene.h  SceneManagerSubSystem.h
Phoenix/HAL/Common/Core/Scene/src/: OrthographicCamera.cpp  OrthographicCameraController.cpp  Scene.cpp  SceneManagerSubSystem.cpp
Phoenix/HAL/Common/Core/Serialization/include/: AbstractFactory.h  BlobSerializer.h  SerializerSubsystem.h
Phoenix/HAL/Common/Core/Serialization/src/: AbstractFactory.cpp  BlobSerializer.cpp  SerializerSubsystem.cpp
Phoenix/HAL/Common/Core/Window/include/: Window.h
Phoenix/HAL/Common/Core/Window/src/: Window.cpp
Phoenix/HAL/Core/Animation/include/: AnimationSubsystem.h
Phoenix/HAL/Core/Animation/src/: AnimationSubsystem.cpp
Phoenix/HAL/Core/Application/include/: Application.h
Phoenix/HAL/Core/Application/src/: Application.cpp
Phoenix/HAL/Core/ECSExtended/include/: Entity.h  EntitySubsystem.h  SpriteSubsystem.h  Tag.h  TransformSubsytem.h
Phoenix/HAL/Core/ECSExtended/src/: Entity.cpp  EntitySubsystem.cpp  SpriteSubsystem.cpp  TransformSubsytem.cpp
Phoenix/HAL/Core/Graphics/DataObjects/include/: Buffer.h  Shader.h  Texture.h  VertexArray.h
Phoenix/HAL/Core/Graphics/DataObjects/src/: Buffer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
Phoenix/HAL/Core/Graphics/OpenGLImpl/include/: OpenGLBuffer.h  OpenGLShader.h  OpenGLTexture2D.h  OpenGLVertexArray.h
Phoenix/HAL/Core/Graphics/OpenGLImpl/src/: OpenGLBuffer.cpp  OpenGLShader.cpp  OpenGLTexture2D.cpp  OpenGLVertexArray.cpp
Phoenix/HAL/Core/Graphics/Render/include/: Renderer.h  (+4 more)
Phoenix/HAL/Core/Graphics/Shaders/: fragment.frag  vertex.vert
Phoenix/HAL/Core/Input/include/: Input.h  InputActionRegistratorSubSystem.h  InputActions.h
Phoenix/HAL/Core/Input/src/: Input.cpp  InputActionRegistratorSubSystem.cpp
Phoenix/HAL/Core/Physics/include/: CollisionSubSytem.h
Phoenix/HAL/Core/Physics/src/: CollisionSubSytem.cpp
Phoenix/HAL/Core/Scene/include/: Camera.h  CameraController.h  OrthographicCamera.h  OrthographicCameraController.h  Scene.h  SceneManagerSubSystem.h
Phoenix/HAL/Core/Scene/src/: Camera.cpp  CameraController.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  Scene.cpp  SceneManagerSubSystem.cpp
Phoenix/HAL/Core/Serialization/include/: AbstractFactory.h  BlobSerializer.h  SerializerSubsystem.h
Phoenix/HAL/Core/Serialization/src/: BlobSerializer.cpp  SerializerSubsystem.cpp
Phoenix/HAL/Core/Window/include/: Window.h
Phoenix/HAL/Core/Window/src/: Window.cpp
Phoenix/HAL/Windows/: Windows.h
Phoenix/HAL/Windows/Core/: Core.h
Phoenix/HAL/Windows/Input/src/: WindowsInput.cpp
Phoenix/HAL/Windows/Window/include/: Window.h
Phoenix/HAL/Windows/Window/src/: Window.cpp
(+34 files in other folders)
